# webgpu-experiments

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  Trunk.toml  animation.json  check-webgpu.ts  env.d.ts  eslint.config.js  index.html  index.ts  justfile  mat4.ts  package-lock.json  package.json  prettier.config.js  rustfmt.toml  spack.config.js  sprites.ts  tsconfig.json  utils.ts  vite.config.js  webgl2.ts  webgpu.ts
.github/workflows/: pages.yml
assets/: index-616ac285.js  index-63fd2d5d.js  index-91befbab.js  index-96c3ce0d.js  index-dc52d257.js  index-f9b1e044.js
engine/: index.ts
game-of-life/: index.html  index.ts
game-of-webgpu/: index.html  index.ts
renderer/: index.html  index.ts  mat4.ts
renderer-webgl2/: index.html  index.ts  mat4.ts
renderer-webgpu/: index.html  index.ts
src/: index.ts  lib.rs  main.rs
src/backends/: webgl2.ts  webgpu.ts
src/data/: animation.json
src/helpers/: image.ts  matrix.ts  resize.ts
src/shaders/: fragment.glsl  vertex.glsl
src/systems/: animation.ts  input.ts  movement.ts  sprites.ts
