[package]
name = "wgpu-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1"
winit = "0.28"
wgpu = "0.16"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"



[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version= "0.16", features = ["webgl"]}
# winit = { version = "0.28", features = ["web-sys"] }
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.63", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    # "Gpu",
    # "GpuAdapter",
    # "GpuAdapterFeatures",
    # "GpuAdapterLimits",
    # "GpuAddressMode",
    # "GpuBindGroup",
    # "GpuBindGroupDescriptor",
    # "GpuBindGroupEntry",
    # "GpuBindGroupLayout",
    # "GpuBindGroupLayoutDescriptor",
    # "GpuBindGroupLayoutEntry",
    # "GpuBlendComponent",
    # "GpuBlendFactor",
    # "GpuBlendOperation",
    # "GpuBlendState",
    # "GpuBuffer",
    # "GpuBufferBinding",
    # "GpuBufferBindingLayout",
    # "GpuBufferBindingType",
    # "GpuBufferDescriptor",
    # "GpuBufferUsage",
    # "GpuCanvasContext",
    # "GpuColorDict",
    # "GpuColorTargetState",
    # "GpuColorWrite",
    # "GpuCommandBuffer",
    # "GpuCommandBufferDescriptor",
    # "GpuCommandEncoder",
    # "GpuCommandEncoderDescriptor",
    # "GpuCompareFunction",
    # "GpuCompilationInfo",
    # "GpuCompilationMessage",
    # "GpuCompilationMessageType",
    # "GpuComputePassDescriptor",
    # "GpuComputePassEncoder",
    # "GpuComputePipeline",
    # "GpuComputePipelineDescriptor",
    # "GpuCullMode",
    # "GpuDepthStencilState",
    # "GpuDevice",
    # "GpuDeviceDescriptor",
    # "GpuDeviceLostInfo",
    # "GpuDeviceLostReason",
    # "GpuErrorFilter",
    # "GpuExtent3dDict",
    # "GpuFeatureName",
    # "GpuFilterMode",
    # "GpuFragmentState",
    # "GpuFrontFace",
    # "GpuImageCopyBuffer",
    # "GpuImageCopyImageBitmap",
    # "GpuImageCopyTexture",
    # "GpuImageDataLayout",
    # "GpuIndexFormat",
    # "GpuInputStepMode",
    # "GpuLoadOp",
    # "GpuMapMode",
    # "GpuMultisampleState",
    # "GpuObjectDescriptorBase",
    # "GpuOrigin2dDict",
    # "GpuOrigin3dDict",
    # "GpuOutOfMemoryError",
    # "GpuPipelineDescriptorBase",
    # "GpuPipelineLayout",
    # "GpuPipelineLayoutDescriptor",
    # "GpuPipelineStatisticName",
    # "GpuPowerPreference",
    # "GpuPrimitiveState",
    # "GpuPrimitiveTopology",
    # "GpuProgrammableStage",
    # "GpuQuerySet",
    # "GpuQuerySetDescriptor",
    # "GpuQueryType",
    # "GpuQueue",
    # "GpuRenderBundle",
    # "GpuRenderBundleDescriptor",
    # "GpuRenderBundleEncoder",
    # "GpuRenderBundleEncoderDescriptor",
    # "GpuRenderPassColorAttachment",
    # "GpuRenderPassDepthStencilAttachment",
    # "GpuRenderPassDescriptor",
    # "GpuRenderPassEncoder",
    # "GpuRenderPipeline",
    # "GpuRenderPipelineDescriptor",
    # "GpuRequestAdapterOptions",
    # "GpuSampler",
    # "GpuSamplerBindingLayout",
    # "GpuSamplerBindingType",
    # "GpuSamplerDescriptor",
    # "GpuShaderModule",
    # "GpuShaderModuleDescriptor",
    # "GpuShaderStage",
    # "GpuStencilFaceState",
    # "GpuStencilOperation",
    # "GpuStorageTextureAccess",
    # "GpuStorageTextureBindingLayout",
    # "GpuStoreOp",
    # "GpuSwapChain",
    # "GpuSwapChainDescriptor",
    # "GpuTexture",
    # "GpuTextureAspect",
    # "GpuTextureBindingLayout",
    # "GpuTextureDescriptor",
    # "GpuTextureDimension",
    # "GpuTextureFormat",
    # "GpuTextureSampleType",
    # "GpuTextureUsage",
    # "GpuTextureView",
    # "GpuTextureViewDescriptor",
    # "GpuTextureViewDimension",
    # "GpuUncapturedErrorEvent",
    # "GpuUncapturedErrorEventInit",
    # "GpuValidationError",
    # "GpuVertexAttribute",
    # "GpuVertexBufferLayout",
    # "GpuVertexFormat",
    # "GpuVertexState",
]}
js-sys = "0.3.63"


